Harmony: Don't snap the width of the chrome:// page info bubbles.

Adds views::DialogDelegate::ShouldSnapFrameWidth() -> bool to do this.

BUG=718696, 719274

Review-Url: https://codereview.chromium.org/2863923002
Cr-Commit-Position: refs/heads/master@{#469914}

Former-commit-id: 0657b42372a48280879bb16061dcbd258a360814