chrome/browser/ui/views/page_info/page_info_bubble_view.cc
@@ -217,6 +217,7 @@ class InternalPageInfoBubbleView : public views::BubbleDialogDelegateView {
   // views::BubbleDialogDelegateView:
   void OnWidgetDestroying(views::Widget* widget) override;
   int GetDialogButtons() const override;
+  bool ShouldSnapFrameWidth() const override;
 
  private:
   friend class PageInfoBubbleView;
@@ -376,6 +377,10 @@ void InternalPageInfoBubbleView::OnWidgetDestroying(views::Widget* widget) {
 
 int InternalPageInfoBubbleView::GetDialogButtons() const {
   return ui::DIALOG_BUTTON_NONE;
+}
+
+bool InternalPageInfoBubbleView::ShouldSnapFrameWidth() const {
+  return false;
 }
 
 ////////////////////////////////////////////////////////////////////////////////
